[package]
name = "filter_org_txt"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.10"
regex = "1.10.3"
base64 = "0.21.7"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
